fix whitespaces to spaces instead of tabs